# SecretWarehouse

./: .gitignore  .ralphrc  CLAUDE.md  LICENSE  README.md  build_linux.sh  build_mac.sh  build_windows.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.ralph/: AGENT.md  PROMPT.md  fix_plan.md
.ralph/specs/: requirements.md
.workbuddy/memory/: 2026-05-11.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  main.rs  models.rs  search.rs
src/components/: MasterPassword.tsx  QuickAddWindow.tsx  QuickSearch.tsx  QuickSearchWindow.tsx  SearchBar.tsx  SecretDetail.tsx  SecretForm.tsx  SecretList.tsx  Settings.tsx  Sidebar.tsx  TemplateForm.tsx  TemplateList.tsx  ThemeProvider.tsx
src/stores/: useStore.ts
src/types/: index.ts
src/utils/: sensitive.ts
