[package]
name = "secret-warehouse"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
arboard = "3"
indexmap = { version = "2", features = ["serde"] }
zip = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
